--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Maria Eduarda De Oliveira Almeida</span>
+                <span class="d-block d-lg-none">Eduarda Almeida</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/perfil.png" alt="Foto Perfil Eduarda" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -53,7 +53,6 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/oliveira-mariaeduarda/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/EduardaOliveiraAlmeida"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
                     </div>
                 </div>
             </section>
