--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Eduarda
+                        Maria Eduarda
                         <span class="text-primary">Almeida</span>
                     </h1>
                     <div class="subheading mb-5">
@@ -51,8 +51,8 @@
                         profissionalmente na área da tecnologia, colocando em prática assuntos
                         abordados na sala de aula.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/oliveira-mariaeduarda/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://github.com/EduardaOliveiraAlmeida"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/oliveira-mariaeduarda/" alt="link for linkedin"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/EduardaOliveiraAlmeida" alt="link for github"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </section>
@@ -106,12 +106,11 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Hard Skills</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-python"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-html5" alt="icon html5"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-css3-alt" alt="icon css3"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-js-square" alt="icon javascript"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-react" alt="icon react"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-python" alt="icon python"></i></li>
                     </ul>
                     <div class="subheading mb-3">Soft Skills</div>
                     <ul class="fa-ul mb-0">
