--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Maria Eduarda
+                        Eduarda
                         <span class="text-primary">Almeida</span>
                     </h1>
                     <div class="subheading mb-5">
