--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <a href="mailto:eduardaoliveiraalmeida1@gmail.com">eduardaoliveiraalmeida1@gmail.com</a>
                     </div>
                     <p class="lead mb-5">Olá! Sou uma estudante de engenharia elétrica e de Análise e desenvolvimento
-                        de sistemas, tenho 20 anos e estou à procura de uma oportunidade para me desenvolver
+                        de sistemas, tenho 21 anos e estou à procura de uma oportunidade para me desenvolver
                         profissionalmente na área da tecnologia, colocando em prática assuntos
                         abordados na sala de aula.</p>
                     <div class="social-icons">
@@ -85,7 +85,7 @@
                             <h3 class="mb-0">Universidade Federal de Pernambuco</h3>
                             <div class="subheading mb-3">Bachalerado em Engenharia Elétrica</div>
                     <div>Quarto período</div>
-                            <p>Turno: Noite</p>
+                            <p>Turno: Integral</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Agosto 2021 - Agora</span></div>
                     </div>
