--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Eduarda
+                        Maria Eduarda
                         <span class="text-primary">Almeida</span>
                     </h1>
                     <div class="subheading mb-5">
@@ -47,7 +47,7 @@
                         <a href="mailto:eduardaoliveiraalmeida1@gmail.com">eduardaoliveiraalmeida1@gmail.com</a>
                     </div>
                     <p class="lead mb-5">Olá! Sou uma estudante de engenharia elétrica e de Análise e desenvolvimento
-                        de sistemas, tenho 21 anos e estou à procura de uma oportunidade para me desenvolver
+                        de sistemas, tenho 20 anos e estou à procura de uma oportunidade para me desenvolver
                         profissionalmente na área da tecnologia, colocando em prática assuntos
                         abordados na sala de aula.</p>
                     <div class="social-icons">
@@ -85,17 +85,26 @@
                             <h3 class="mb-0">Universidade Federal de Pernambuco</h3>
                             <div class="subheading mb-3">Bachalerado em Engenharia Elétrica</div>
                     <div>Quarto período</div>
-                            <p>Turno: Integral</p>
+                            <p>Turno: Integral/Manhã</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Agosto 2021 - Agora</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                     <h3 class="mb-0">Faculdade Estácio de Sá</h3>
-                                    <div class="subheading mb-3">Tecnólogo em Análise e Desenvolvimento de Sistemas (EAD)</div>
-                            <p>Segundo Período</p>
+                                    <div class="subheading mb-3">Tecnólogo em Análise e Desenvolvimento de Sistemas</div>
+                                    <div>Terceiro período</div>
+                                    <p>EAD</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Junho 2022 - Agora</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                    <h3 class="mb-0">Programa Desenvolve - Boticário</h3>
+                                    <div class="subheading mb-3">Curso de formação FullStack pela Alura</div>
+                            <p>EAD</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Janeiro 2023 - Agora</span></div>
                     </div>
                 </div>
             </section>
@@ -111,6 +120,7 @@
                         <li class="list-inline-item"><i class="fab fa-js-square" alt="icon javascript"></i></li>
                         <li class="list-inline-item"><i class="fab fa-react" alt="icon react"></i></li>
                         <li class="list-inline-item"><i class="fab fa-python" alt="icon python"></i></li>
+                        <li class="list-inline-item"><i class="fa-solid fa-c" alt="icon c"></i></li>
                     </ul>
                     <div class="subheading mb-3">Soft Skills</div>
                     <ul class="fa-ul mb-0">
@@ -173,3 +183,4 @@
         <script src="js/scripts.js"></script>
     </body>
 </html>
+
