--- a/index.html
+++ b/index.html
@@ -98,13 +98,22 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Junho 2022 - Agora</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                     <h3 class="mb-0">Programa Desenvolve - Boticário</h3>
                                     <div class="subheading mb-3">Curso de formação FullStack pela Alura</div>
-                            <p>EAD</p>
+                                    <div>Duração: 6 meses</div>
+                                    <p>EAD</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Janeiro 2023 - Agora</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                    <h3 class="mb-0">Udemy</h3>
+                                    <div class="subheading mb-3">Curso de Python para ciência de dados e Bootcamp de Machine Learning</div>
+                            <p>EAD</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Dezembro 2022 - Agora</span></div>
                     </div>
                 </div>
             </section>
@@ -183,4 +192,5 @@
         <script src="js/scripts.js"></script>
     </body>
 </html>
+
 
