--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experiências</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Educação</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Certificados</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Idiomas e Competências</a></li>
                 </ul>
             </div>
         </nav>
@@ -39,7 +39,7 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Eduarda
+                        Maria Eduarda
                         <span class="text-primary">Almeida</span>
                     </h1>
                     <div class="subheading mb-5">
@@ -47,13 +47,12 @@
                         <a href="mailto:eduardaoliveiraalmeida1@gmail.com">eduardaoliveiraalmeida1@gmail.com</a>
                     </div>
                     <p class="lead mb-5">Olá! Sou uma estudante de engenharia elétrica e de Análise e desenvolvimento
-                        de sistemas, tenho 20 anos e estou à procura de uma oportunidade para me desenvolver
+                        de sistemas, tenho 21 anos e estou à procura de uma oportunidade para me desenvolver
                         profissionalmente na área da tecnologia, colocando em prática assuntos
                         abordados na sala de aula.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/oliveira-mariaeduarda/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://github.com/EduardaOliveiraAlmeida"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/oliveira-mariaeduarda/" alt="link for linkedin"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/EduardaOliveiraAlmeida" alt="link for github"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </section>
@@ -86,17 +85,35 @@
                             <h3 class="mb-0">Universidade Federal de Pernambuco</h3>
                             <div class="subheading mb-3">Bachalerado em Engenharia Elétrica</div>
                     <div>Quarto período</div>
-                            <p>Turno: Noite</p>
+                            <p>Turno: Integral/Manhã</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Agosto 2021 - Agora</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                     <h3 class="mb-0">Faculdade Estácio de Sá</h3>
-                                    <div class="subheading mb-3">Tecnólogo em Análise e Desenvolvimento de Sistemas (EAD)</div>
-                            <p>Segundo Período</p>
+                                    <div class="subheading mb-3">Tecnólogo em Análise e Desenvolvimento de Sistemas</div>
+                                    <div>Terceiro período</div>
+                                    <p>EAD</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Junho 2022 - Agora</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                    <h3 class="mb-0">Programa Desenvolve - Boticário</h3>
+                                    <div class="subheading mb-3">Curso de formação FullStack pela Alura</div>
+                                    <div>Duração: 6 meses</div>
+                                    <p>EAD</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Janeiro 2023 - Agora</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                    <h3 class="mb-0">Udemy</h3>
+                                    <div class="subheading mb-3">Curso de Python para ciência de dados e Bootcamp de Machine Learning</div>
+                            <p>EAD</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Dezembro 2022 - Agora</span></div>
                     </div>
                 </div>
             </section>
@@ -107,12 +124,12 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Hard Skills</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-python"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-html5" alt="icon html5"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-css3-alt" alt="icon css3"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-js-square" alt="icon javascript"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-react" alt="icon react"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-python" alt="icon python"></i></li>
+                        <li class="list-inline-item"><i class="fa-solid fa-c" alt="icon c"></i></li>
                     </ul>
                     <div class="subheading mb-3">Soft Skills</div>
                     <ul class="fa-ul mb-0">
