--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                         Pau amarelo · Paulista, PE · (85) 98953-5396 ·
                         <a href="mailto:eduardaoliveiraalmeida1@gmail.com">eduardaoliveiraalmeida1@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">Olá! Sou uma estudante de engenharia elétrica e de Análise e desenvolvimento
-                        de sistemas, tenho 21 anos e estou à procura de uma oportunidade para me desenvolver
-                        profissionalmente na área da tecnologia, colocando em prática assuntos
+                    <p class="lead mb-5">Olá! Sou estudante de análise e desenvolvimento
+                        de sistemas e também de desenvolvimento Fullstack, tenho 21 anos e estou à procura de uma oportunidade para me desenvolver
+                        profissionalmente na área de desenvolvimento, colocando em prática assuntos teóricos
                         abordados na sala de aula.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/oliveira-mariaeduarda/" alt="link for linkedin"><i class="fab fa-linkedin-in"></i></a>
@@ -73,22 +73,24 @@
                                 organização de arquivos e controle de correspondências.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Abril 2020 - Abril 2021</span></div>
-                </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                        <h3 class="mb-0">Gerente de parcerias</h3>
+                            <div class="subheading mb-3">Jooble</div>
+                            <p>Desenvolvimento e implementação de estratégias de
+                            alcance para aumentar a visibilidade da empresa, estabelecimento de
+                            parcerias estratégicas com empresas e análise de métricas e resultados
+                            para medir o desempenho das iniciativas de alcance (SEO).</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Outubro 2022 - Abril 2023</span></div>
+                    </div>
             </section>
             <hr class="m-0" />
             <!-- Education-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Educação</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Universidade Federal de Pernambuco</h3>
-                            <div class="subheading mb-3">Bachalerado em Engenharia Elétrica</div>
-                    <div>Quarto período</div>
-                            <p>Turno: Integral/Manhã</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Agosto 2021 - Agora</span></div>
-                    </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                     <h3 class="mb-0">Faculdade Estácio de Sá</h3>
@@ -127,7 +129,9 @@
                         <li class="list-inline-item"><i class="fab fa-html5" alt="icon html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt" alt="icon css3"></i></li>
                         <li class="list-inline-item"><i class="fab fa-js-square" alt="icon javascript"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react" alt="icon react"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-bootstrap" alt="icon bootstrap"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-node" alt="icon node"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-npm" alt="icon npm"></i></li>
                         <li class="list-inline-item"><i class="fab fa-python" alt="icon python"></i></li>
                         <li class="list-inline-item"><i class="fa-solid fa-c" alt="icon c"></i></li>
                     </ul>
@@ -181,6 +185,22 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             Pacote Office - Intermediário
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Metodologias agéis: Scrum
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            MongoDB
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            MySQL
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Conhecimentos em ferramentas SEO e CRM
                         </li>
                     </ul>
                 </div>
